# PythonManager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.ru.md  bootstrap.bat  bootstrap.ps1  pyembed.bat  pyembed.ps1  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run.py  run_gui.ps1
.github/workflows/: ci.yml  release.yml
pyembed/: __init__.py  cli.py  config.py  download.py  gui.py  local.py  path_env.py  version_util.py
scripts/: backup_gui.py  backup_sources.py  build_exe.py  pyembed_gui.py
tests/: test_cli.py  test_config.py  test_download.py  test_local.py  test_local_verify.py  test_path_env.py  test_version_util.py
