[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyembed"
version = "0.3.0"
description = "Менеджер портативных embeddable Python для Windows (скачивание в папку, pip, PATH)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0", "pyright>=1.1.0"]

[project.scripts]
pyembed = "pyembed.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyembed*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
